Home Page almost done

--- a/css/style.css
+++ b/css/style.css
@@ -39,4 +39,21 @@
 .cal-panel {
     text-align: center;
 }
+a:link {
+    color: inherit;
+}
 
+/* visited link */
+a:visited {
+    color: inherit;
+}
+
+/* mouse over link */
+a:hover {
+    color: inherit;
+}
+
+/* selected link */
+a:active {
+    color: inherit;
+}
