--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,41 @@ a{
 .modal-header {
     padding: 5px 10px;
 }
+.collection .collection-item.avatar {
+    min-height: 63px;
+}
+
+#map-panel {
+    padding: 7px 0px 0px 0px;
+}
+
+.form-footer {
+    border-top: 1px solid #eee;
+    position: fixed;
+    left:0px;
+    bottom: 0px;
+    background: white;
+    padding:5px;
+    width:100%;
+    -webkit-box-shadow: 0px -1px 5px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px -1px 5px -3px rgba(0,0,0,0.75);
+    box-shadow: 0px -1px 5px -3px rgba(0,0,0,0.75);
+}
+
+.form-footer a {
+    float: right;
+}
+
+#destination, #end-run {
+    display:none;
+}
+
+#stats_card{
+    margin-bottom: auto;
+}
+.graphpic{
+    max-width: 100%;
+}
+#homelink{
+    color:black;
+}
